Fix text contrast for accessibility

--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -17,7 +17,7 @@
 
   &__footer-wrapper {
     @include moderato;
-    color: $color-neutral-medium;
+    color: $color-neutral-medium-high;
     margin: 0 auto;
     max-width: $layout-wrapper;
     padding: 0 $h-unit;
